[package]
name = "suspendlib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jni = "*"
lazy_static = "*"
once_cell = "*"
log = "*"
log-panics = { version = "2", features = ["with-backtrace"]}

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "*"


[dependencies.tokio]
version = "*"
features = ["full"]


[profile.release]
lto = true
codegen-units = 1
debug = true